--- a/AtkTennisWeb/Views/AdminHome/CabinetDebtOperations.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/CabinetDebtOperations.cshtml
@@ -56,7 +56,7 @@
                     <div class="portlet-body">
                         <div class="portlet light" style="padding: 15px;">
                             <div class="alert alert-info" style="margin-bottom: 0; background-color:#343a40">
-                                <strong>Rezervasyon Ödemesi!</strong> İlgili üye bilgisini bularak işleme devam ediniz.
+                                <strong>Dolap Ödemesi!</strong> İlgili üye bilgisini bularak işleme devam ediniz.
                             </div>
                         </div>
                     </div>
@@ -463,7 +463,7 @@
         var explain = $("#explain").val();
 
 
-        if (userId == "" || currentUserId == "" || price == "" || paidPrice == "" || receiptNo == "" || receiptDate == "" || explain == "") {
+        if (userId == "" || currentUserId == "" || price == "" || paidPrice == "" || receiptNo == "" || receiptDate == "" ) {
             alert("Lütfen Tüm Bilgileri Eksiksiz Doldurunuz !");
         }
         else {
