--- a/AtkTennisWeb/Views/AdminHome/DuesDebtOperations.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/DuesDebtOperations.cshtml
@@ -221,7 +221,7 @@
         var explain = $("#explain").val();
 
 
-        if (userId == "" || currentUserId == "" || price == "" || paidPrice == "" || receiptNo == "" || receiptDate == "" || explain == "") {
+        if (userId == "" || currentUserId == "" || price == "" || paidPrice == "" || receiptNo == "" || receiptDate == "" ) {
 
             alert("Lütfen Tüm Bilgileri Eksiksiz Doldurunuz !");
             setTimeout(function () { $("body").loading('destroy'); });
