--- a/AtkTennisWeb/Views/Shared/_MemberLayout.cshtml
+++ b/AtkTennisWeb/Views/Shared/_MemberLayout.cshtml
@@ -1,19 +1,14 @@
 ﻿@using Microsoft.AspNetCore.Http;
 @inject IHttpContextAccessor HttpContextAccessor;
 
-
-
     <!DOCTYPE html>
     <html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>ATK Tenis Akademisi Sistemi</title>
-
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
         <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-
-
         <link href="~/adminRoot/plugins/icheck-bootstrap.min.css" rel="stylesheet" />
         <link href="~/adminRoot/plugins/jqvmap.min.css" rel="stylesheet" />
         <link href="~/adminRoot/css/all.min.css" rel="stylesheet" />
@@ -25,31 +20,19 @@
         <link href="~/adminRoot/css/calender.css" rel="stylesheet" />
         <link href="~/adminRoot/css/loading.css" rel="stylesheet" />
         <link href="~/lib/jquery/dist/jquery-ui.css" rel="stylesheet" />
-
         <link rel="stylesheet" href="~/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
         <link rel="stylesheet" href="~/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
         <link rel="stylesheet" href="~/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
-
-        <link href="~/vendor/select2/select2.min.css" rel="stylesheet" media="all">
-        @*<link href="~/rcss/main.css" rel="stylesheet" media="all">*@
+        <link href="~/vendor/select2/select2.min.css" rel="stylesheet" media="all">       
         <link href="~/vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
-
-        <!-- jQuery -->
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
-
-
         <script src="~/lib/jquery/dist/jquery-ui.js"></script>
     </head>
-
-
-
     @{
         var fullname = HttpContextAccessor.HttpContext.Session.GetString("FullName");
         var userId = HttpContextAccessor.HttpContext.Session.GetString("UserId");
         var roleName = HttpContextAccessor.HttpContext.Session.GetString("Role");
-    }
 
-    @{
         DateTime today = DateTime.Now;
         var date = today.ToString("yyyy-MM-dd");
     }
@@ -80,10 +63,7 @@
         </style>
 
         <div class="wrapper">
-
-            <!-- Navbar -->
             <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-                <!-- Left navbar links -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
@@ -210,7 +190,6 @@
                                 </a>
                             </li>
 
-
                             <li class="nav-item">
                                 <a style="background-color:#625e5e" href="/Public/MemberInf" class="nav-link">
                                     <i class="fas fa-id-card nav-icon"></i>
@@ -218,29 +197,22 @@
                                 </a>
                             </li>
 
-
-
                             <li class="nav-item ">
                                 <a style="background-color:#625e5e" href="#" class="nav-link">
                                     <i class="nav-icon fas fa-bell"></i>
                                     <p>
                                         Rezervasyonlar
                                         <i class="fas fa-angle-left right"></i>
-
                                     </p>
                                 </a>
 
                                 <ul class="nav nav-treeview">
-
-
                                     <li class="nav-item">
                                         <a href="~/Public/Reservation?date=@date" class="nav-link">
                                             <i class="fas fa-calendar-check nav-icon"></i>
                                             <p>Rezervasyon Yap</p>
                                         </a>
                                     </li>
-
-
 
                                     <li class="nav-item">
                                         <a href="~/Public/ReservationList" class="nav-link">
@@ -255,40 +227,40 @@
                                             <p>Rezervasyon İptal</p>
                                         </a>
                                     </li>
-
-
                                 </ul>
                             </li>
 
-                            <li class="nav-item ">
-                                <a style="background-color:#625e5e" href="#" class="nav-link">
-                                    <i class="nav-icon fas fa-bell"></i>
-                                    <p>
-                                        Aidatlar
-                                        <i class="fas fa-angle-left right"></i>
+                            @if (roleName != "Antrenör")
+                            {
+                                <li class="nav-item ">
+                                    <a style="background-color:#625e5e" href="#" class="nav-link">
+                                        <i class="nav-icon fas fa-bell"></i>
+                                        <p>
+                                            Aidatlar
+                                            <i class="fas fa-angle-left right"></i>
 
-                                    </p>
-                                </a>
+                                        </p>
+                                    </a>
 
-                                <ul class="nav nav-treeview">
+                                    <ul class="nav nav-treeview">
 
-                                    <li class="nav-item">
-                                        <a href="~/Public/GetMemberDebt?userId=@userId" class="nav-link">
-                                            <i class="fas fa-wallet nav-icon"></i>
-                                            <p>Üyelik Aidatlarım</p>
-                                        </a>
-                                    </li>
+                                        <li class="nav-item">
+                                            <a href="~/Public/GetMemberDebt?userId=@userId" class="nav-link">
+                                                <i class="fas fa-wallet nav-icon"></i>
+                                                <p>Üyelik Aidatlarım</p>
+                                            </a>
+                                        </li>
 
-                                    <li class="nav-item">
-                                        <a href="~/Public/GetCabinetDebt?userId=@userId" class="nav-link">
-                                            <i class="fas fa-wallet nav-icon"></i>
-                                            <p>Dolap Aidatlarım</p>
-                                        </a>
-                                    </li>
+                                        <li class="nav-item">
+                                            <a href="~/Public/GetCabinetDebt?userId=@userId" class="nav-link">
+                                                <i class="fas fa-wallet nav-icon"></i>
+                                                <p>Dolap Aidatlarım</p>
+                                            </a>
+                                        </li>
 
-                                </ul>
-                            </li>
-
+                                    </ul>
+                                </li>
+                            }
                         </ul>
                     </nav>
                 </div>
