--- a/AtkTennisWeb/Views/SystemSettings/CourtSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/CourtSettings.cshtml
@@ -204,32 +204,41 @@ else
                                         <th>Kodu </th>
                                         <th>Adı</th>
                                         <th>Renk Kodu</th>
-
                                         <th>İşlemler</th>
 
                                     </tr>
                                 </thead>
                                 <tbody>
-                              
+
                                     @foreach (var item2 in Model.courtScales)
                                     {
                                         if (item2.CompanyId == CompId)
                                         {
-                                            <tr style="text-align:center">
-                                                <td style="text-align:center;background-color:@item2.Color;color:#ffffff;"><span>@item2.Code</span></td>
-                                                <td>@item2.Name</td>
-                                                <td>@item2.Color</td>
+                                            if (item2.Name != "Yönetici" && item2.Name != "Sekreterya")
+                                            {
+                                                <tr style="text-align:center">
+
+                                                    <td style="text-align:center;background-color:@item2.Color;color:#ffffff;"><span>@item2.Code</span></td>
+                                                    <td>@item2.Name</td>
+                                                    <td>@item2.Color</td>
 
 
-                                                <td>
+                                                    <td>
+                                                        @if (item2.Name == "Üye" || item2.Name == "Antrenör")
+                                                        {
+                                                            <button class="btn btn-outline-success" id="@item2.CourtScaleListId" onclick="openUpdateCourtScaleModal(this.id)"><i class="fas fa-edit"></i></button>
+                                                        }
+                                                        else
+                                                        {
+                                                            <button class="btn btn-outline-success" id="@item2.CourtScaleListId" onclick="openUpdateCourtScaleModal(this.id)"><i class="fas fa-edit"></i></button>
+                                                            <button class="btn btn-outline-danger" id="@item2.CourtScaleListId" onclick="deleteCourtScale(this.id)"><i class="fas fa-trash"></i></button>
+                                                        }
 
-                                                    <button class="btn btn-outline-success" id="@item2.CourtScaleListId" onclick="openUpdateCourtScaleModal(this.id)"><i class="fas fa-edit"></i></button>
-                                                    <button class="btn btn-outline-danger" id="@item2.CourtScaleListId" onclick="deleteCourtScale(this.id)"><i class="fas fa-trash"></i></button>
-                                                </td>
+                                                    </td>
 
-                                            </tr>
+                                                </tr>
+                                            }
                                         }
-
                                     }
                                 </tbody>
                             </table>
@@ -1979,6 +1988,10 @@ else
                     $("#scaleColor").val(res.color);
                     $("#scaleName").val(res.name);
                     $("#scaleCode").val(res.code);
+
+                    if (res.name == "Üye" || res.name == "Antrenör") {
+                        $("#scaleName").attr("disabled" , "disabled");
+                    }
 
                     $("#updateCourtScaleModel button:nth-of-type(2)").attr("id", id);
                     $('#updateCourtScaleModal').modal('toggle');
